force-app/main/default/objects/AccountContactRelation/fields/Is_Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Is_Primary_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this Contact is the primary point of contact for this investing entity Account.</description>
    <inlineHelpText>Check if this Contact is the primary contact for this investing entity.</inlineHelpText>
    <label>Is Primary Contact</label>
    <type>Checkbox</type>
</CustomField>