force-app/main/default/objects/AccountContactRelation/fields/Is_Required_Signer__c.field-meta.xml
<CustomField>
    <fullName>Is_Required_Signer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this Contact is a required signer on documents for this investing entity Account.</description>
    <inlineHelpText>Check if this Contact must sign documents for this investing entity.</inlineHelpText>
    <label>Is Required Signer</label>
    <type>Checkbox</type>
</CustomField>