force-app/main/default/objects/AccountContactRelation/fields/Signing_Order__c.field-meta.xml
<CustomField>
    <fullName>Signing_Order__c</fullName>
    <description>The order in which this Contact must sign documents for this investing entity (e.g. 1 signs first, 2 signs second) when multiple signers are required.</description>
    <inlineHelpText>Enter this signer's position in the signing sequence (1 = first).</inlineHelpText>
    <label>Signing Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>